--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
+</head> <meta name="google-site-verification" content="nzMU939VrTBNJBq-fbAABVZNXdt16NFM9OR04IFvnbE" /> 
 <body>
     <header>
         <h1>💰 Calculadora de Ahorros 3.0</h1>
@@ -89,6 +89,7 @@
     </script>
 </body>
 </html>
+
 
 
 
