--- a/index.html
+++ b/index.html
@@ -1,56 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"> 
-    <!-- Optimización para móviles -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-  }
-
-  /* Contenedor principal centrado */
-  .container {
-    max-width: 480px;
-    margin: auto;
-    padding: 15px;
-  }
-
-  input, button {
-    width: 100%;
-    padding: 12px;
-    margin: 6px 0;
-    font-size: 16px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-  }
-
-  button {
-    background: #0073e6;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-
-  button:hover {
-    background: #005bb5;
-  }
-
-  /* Ajustes extra para pantallas pequeñas */
-  @media (max-width: 480px) {
-    h1 { font-size: 20px; }
-    p, input, button { font-size: 14px; }
-  }
-</style>
-
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Ahorros Profesional 3.0</title>
     <meta name="description" content="Calculadora de ahorros, gastos e ingresos con tips diarios, gráficos y exportación PDF. Controla tus finanzas fácilmente.">
     <meta name="keywords" content="calculadora de ahorros, finanzas personales, registro de gastos, ingresos, tips de ahorro, herramienta web">
     <meta name="author" content="Eduardo Abreu Marte">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"><!-- SEO Básico -->
+<title>Calculadora de Ahorros Online | Planifica tus Finanzas Personales</title>
+<meta name="description" content="Calculadora de ahorros online gratis. Registra ingresos y gastos, organiza tu presupuesto, planifica metas financieras y controla tus finanzas personales en cualquier parte del mundo.">
+<meta name="keywords" content="
+calculadora de ahorros,
+calculadora de ahorro online,
+ahorros personales,
+plan de ahorro,
+metas de ahorro,
+ahorro mensual,
+ahorro anual,
+registro de gastos,
+gestión de ingresos,
+finanzas personales,
+tips de ahorro,
+cómo ahorrar dinero,
+planificación financiera,
+educación financiera,
+ahorro inteligente,
+presupuesto familiar,
+ahorro para emergencias,
+ahorro para estudios,
+ahorro para vacaciones,
+ahorro para retiro,
+ahorro para casa,
+ahorro para carro,
+calculadora financiera,
+ahorros RD,
+ahorros República Dominicana,
+ahorro en Latinoamérica,
+personal savings calculator,
+savings goals calculator,
+money saving tips,
+budget calculator,
+financial planning tool,
+income and expenses tracker,
+money management tool
+">
+
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:title" content="Calculadora de Ahorros Online | Gratis y Fácil de Usar" />
+<meta property="og:description" content="Descubre cuánto puedes ahorrar cada mes con nuestra calculadora de ahorros online. Gratis, rápida y disponible en todo el mundo." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://ahorro-diario.vercel.app/" />
+<meta property="og:image" content="https://ahorro-diario.vercel.app/imagen.png" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Calculadora de Ahorros Online | Finanzas Personales" />
+<meta name="twitter:description" content="Controla tus finanzas y logra tus metas con nuestra calculadora de ahorros online gratis." />
+<meta name="twitter:image" content="https://ahorro-diario.vercel.app/imagen.png" />
+
+<!-- Idiomas (SEO internacional) -->
+<link rel="alternate" hreflang="es" href="https://ahorro-diario.vercel.app/" />
+<link rel="alternate" hreflang="en" href="https://ahorro-diario.vercel.app/en/" />
+
+<!-- Robots (asegurarse de indexación) -->
+<meta name="robots" content="index, follow">
+
 
     <!-- Google AdSense -->
     <script data-ad-client="ca-pub-3289191632952433" async
@@ -58,7 +73,7 @@
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head> <meta name="google-site-verification" content="nzMU939VrTBNJBq-fbAABVZNXdt16NFM9OR04IFvnbE" /> 
+</head>
 <body>
     <header>
         <h1>💰 Calculadora de Ahorros 3.0</h1>
@@ -129,7 +144,6 @@
     <script src="script.js"></script>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script> 
     </script>
     <!-- Botones flotantes con iconos -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -211,14 +225,6 @@
 
 </body>
 </html>
-
-
-
-</body>
-</html>
-
-
-
 
 
 
